2.0
====

- Fixed Burden release issue in which children were being released if the
  component was not destroyed

- Automatically configure proxy to omit target if no implementation

- Fluent interface for factory support

- Fixed an issue with of not considering unregistered service dependencies in arrays

- Will not try to convert values that are already a match to the parameter type

- XmlProcessor now properly dispose of the stream reader

- The kernel will now check if trying to register null types

RC 4
====

- Update FromInterface Registration policy to only consider toplevel interfaces
  and allow multiple services.

- Fixed bug in AllComponentsReleasePolicy in which burden not properly handled
  on dispose.

- Applied patch from Joao Braganca to allow abstract types in DefaultComponentActivator if proxied.

- Added additional AddFacility overrides to improve fluent configuration of facilities.

- Moved DefaultComponentActivator check for abstract so it can be better overriden.
  
- Added Attribute to Component Registration fluent interface.

- Add ability to use Configure components based on implementation type when
  using AllTypesOf.

- Do not return forward handlers in ResolveAll since you will get duplicate services.

- Applied patch (with mods) from Martin Nllsson to select registration interface from
  containing interface.

- Added shortcut to AllTypes to accept a where.

- Added ability to include non-public types in registration.

- Updated registration to support providing multiple service types.

- Add registration support for mixins.

- Do not allow registering components with the same name in fluent interface.

- Applied Ayendes patch to introduce component service type forwarding to
  support multiple service interfaces for a component.
  Extended the Component Registration interface to support service forwarding.
